--- a/cards/base/acrobatics.yml
+++ b/cards/base/acrobatics.yml
@@ -1,6 +1,15 @@
+metadata:
+  version: 0.1.0
+---
 name: Acrobatics
-passive: Add 10% to acrobatics
-active: Add 50% to acrobatics
+passive:
+  description: Add 10% to acrobatics
+  skills:
+    acrobatics: +10%
+active:
+  description: Add 50% to acrobatics
+  skills:
+    acrobatics: +50%
 rating: 1
 requires: null
 stackable: false
