--- a/cards/base/combat.yml
+++ b/cards/base/combat.yml
@@ -1,6 +1,15 @@
+metadata:
+  version: 0.1.0
+---
 name: Combat
-passive: Add 10% to combat
-active: Add 50% to combat
+passive:
+  description: Add 10% to combat
+  skills:
+    combat: +10%
+active:
+  description: Add 50% to combat
+  skills:
+    combat: +50%
 rating: 1
 requires: null
 stackable: false
