--- a/cards/base/craft.yml
+++ b/cards/base/craft.yml
@@ -1,6 +1,15 @@
+metadata:
+  version: 0.1.0
+---
 name: Craft
-passive: Add 10% to craft
-active: Add 50% to craft
+passive:
+  description: Add 10% to craft
+  skills:
+    craft: +10%
+active:
+  description: Add 50% to craft
+  skills:
+    craft: +50%
 rating: 1
 requires: null
 stackable: false
